samples/_failures_safe/1760959553_397a7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ba46ee0.c: In function ‘main’:
./samples/SAFE/__tmp_8ba46ee0.c:146:12: error: missing terminating " character
  146 |     printf("\nDecompressed data (%zu bytes
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8ba46ee0.c:146:5: error: expected expression at end of input
  146 |     printf("\nDecompressed data (%zu bytes
      |     ^~~~~~
./samples/SAFE/__tmp_8ba46ee0.c:146:5: error: expected declaration or statement at end of input
